# zola-discord.rs

./: .gitignore  README.md
zola/: .env.example  Cargo.toml
zola/src/: baby.rs  chlog.rs  main.rs
zola/src/commands/: big.rs  color.rs  mod.rs  personalization.rs
