[package]
name = "zola"
version = "0.1.0"
authors = ["Jacob Bridges <hire@jacobbridges.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"

[dependencies.serenity]
version = "0.8.6"
features = ["framework", "standard_framework", "cache"]
