[package]
name = "zola"
version = "0.1.0"
authors = ["Jacob Bridges <hire@jacobbridges.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"
image = "0.23.4"
imageproc = "0.20.0"
rusttype = "0.8.2"  # Pinned to an old version because imageproc requires it

[dependencies.serenity]
version = "0.8.6"
features = ["framework", "standard_framework", "cache"]
